--- a/frontend/src/styles/global/index.css
+++ b/frontend/src/styles/global/index.css
@@ -11,6 +11,7 @@ body,
   margin: 0;
   padding: 0;
   width: 100%;
+  max-width: 100%;
   height: 100%;
   box-sizing: border-box;
   font-family: var(--font-family-primary);
@@ -18,6 +19,7 @@ body,
   line-height: var(--line-height-normal);
   color: var(--celestial-white);
   background-color: transparent;
+  overflow-x: hidden;
 }
 
 *,
@@ -28,7 +30,9 @@ body,
 
 body {
   overflow-x: hidden;
-  /* Prevents horizontal scrollbar */
+  position: relative;
+  word-break: break-word;
+  /* Prevent long strings from expanding parent */
 }
 
 /* Typography */
